# LearnPython

./: .gitignore  .gitmodules  README.md  iterator.py  requirements.txt  setup.cfg
Cython/: README.md
Cython/01_hello_world/: setup.py
Cython/05_c_libraries/: queue.pyx
Cython/06_cdef_classes/: cdef_class.pyx
Cython/07_CyIntergration/: intergrate.pyx
Cython/18_using_cpp/: rect.cpp  (+4 more)
Demonstration/: class_Pet.py  convert_temperature_GUI.py  new_vs_init.py
FunStuff/: fun_palindrome.py
Fun_Stuff/: fun_fizz_buzz.py  fun_new_init.py  fun_os_module.py  fun_palindrome.py  fun_property_deca.py  fun_tips_tricks.py
HackerRank/: input.py
Matplotlib/: 01_mpl_demo.py  02_bar_charts_from_csv.py  03_pie_charts.py  04_stack_plots.py  05_plot_fills.py  README.md  bar_charts_from_csv.py  plot_fills.py  stack_plots.py
Util/: lookupvalue.py  merge_pdf.py  merge_pdf_sequential.py  sqlconnection.py  sshconnection.py
WorkLib/: notes_argparse.py  sqlconnection.py  sshconnection.py
automated_excel/: automated_excel.py
average/: average.py  test_average.py
cython/: README.md  annote_cython.ipynb
gui/: basic_window.py
plot/: README.md  bar_charts.py  mpl_demo.py  pie_charts.py
pyqt/: labels.py  user_profile.py
pytest/: is_palindrome.py  test_04_fixture.py  test_assert_examples.py  test_assertion.py  test_fixture.py  test_is_palindrome.py  test_multiple_tests.py  test_parametization.py  test_sample.py  test_with_pytest.py  test_with_unittest.py
pyxl/: example.py  example.xlsx
src/: __init__.py  eval_input.py  function.py  inheritance.py  iterator.py  new_init.py
(+23 files in other folders)
