[metadata]
name = learnpython
version = 0.1.0
description = A repository to learn Python programming through various examples and projects.
author = Xuhua Huang
author_email = xuhua.huang.io@gmail.com
license = MIT
url = https://github.com/XuhuaHuang/LearnPython
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
install_requires = file: requirements.txt

[options.packages.find]
include = src/**/*

[options.extras_require]
dev =
    pytest>=6.2.0

[coverage:run]
branch = True

[coverage:report]
show_missing = False
